# Template for Automake
# The documentations
#
# Copyright (C) 2005,2006 Robert Lange <robert.lange@s1999.tu-chemnitz.de>
# last Modification: $LastChangedDate$

# define the documentation dir
docdir = $(datadir)/doc/$(PACKAGE)

# include in distribution
# and install to docdir
dist_doc_DATA = htinc.txt TODO \
                ../README ../NEWS
